[package]
name = "vdot"
description = "Create your .env files using HashiCorp Vault."
version = "0.4.12"
authors = ["Samuel Parkinson <samuel.parkinson@hey.com>"]
edition = "2018"
repository = "https://github.com/sjparkinson/vdot"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities", "config"]
keywords = ["cli", "env", "dotenv", "config"]

[dependencies]
anyhow = "1.0.60"
fern = { version = "0.6.1", features = ["colored"] }
log = "0.4.17"
reqwest = { version = "0.11.11", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
structopt = "0.3.26"

[profile.release]
opt-level = 's'
lto = 'fat'
panic = 'abort'
